<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Books_Selecter"
    android:orientation="vertical"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Computer Science"
           android:textAlignment="center"
           android:textSize="45sp"
           android:textStyle="bold"
           android:textColor="@color/purple_200"
           android:gravity="center_horizontal" />
      <CheckBox
          android:padding="15dp"
          android:id="@+id/chbscprgrmng"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/bscprgrmng"
          android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chmthfndmntl"
           android:padding="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/mthfndmntl"
           android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chphysx"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/physx"
          android:textSize="45sp"/>
       <CheckBox
           android:id="@+id/chintrocmptr"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/introcmptr"
           android:padding="15sp"
           android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chislmyt"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/islmyt"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chdld"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dld"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chicmnction"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/cmnction"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chgraph_theory"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/graph_theory"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/choop"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/oop"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chdmth"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/dmth"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
          android:id="@+id/chpsyclgy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/psyclgy"
          android:padding="15dp"
          android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chstats"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/stats"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chos"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/os"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chdbms"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dbms"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chdda"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dda"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chEntrprnr"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/Entrprnr"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chvcshrp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/vcshrp"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chandrodvlpmnt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/androdvlpmnt"
           android:padding="15dp"
           android:textSize="35sp"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Education"
           android:textAlignment="center"
           android:textSize="45sp"
           android:textStyle="bold"
           android:textColor="@color/purple_200"
           android:gravity="center_horizontal" />
       <CheckBox
           android:id="@+id/chacdmicwrtngandrdng"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/acdmicwrtngandrdng"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chclssrmmgmnt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/clssrmmgmnt"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chmotois"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/motois"
           android:padding="15dp"
           android:textSize="35sp"/>
       <CheckBox
           android:id="@+id/chpkstdy"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/pkstdy"
           android:padding="15dp"
           android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chcntmrisuoedu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cntmrisuoedu"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chtourdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tourdu"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chchlddvlpmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chlddvlpmnt"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chartcrfnclgrfy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artcrfnclgrfy"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chtopkstdy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topkstdy"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chQntitvrsrch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Qntitvrsrch"
        android:padding="15dp"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Economics"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:gravity="center_horizontal" />
    <CheckBox
        android:id="@+id/chAcntig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acntig"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ir"
        android:padding="15dp"
        android:textSize="35sp"/>

    <CheckBox
        android:id="@+id/chinfrlststc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infrlststc"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chmicroeconanlsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/microeconanlsis"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chintrmdtmicroecon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intrmdtmicroecon"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chprncplofmacrec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prncplofmacrec"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chintrosocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introsocio"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chbsceconmtrcs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsceconmtrcs"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chmntrytheornplcy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mntrytheornplcy"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chfnnclinsnmrkts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fnnclinsnmrkts"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chpltclecnmy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pltclecnmy"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chpblcfnnce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pblcfnnce"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chenvrmntlecn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/envrmntlecn"
        android:padding="15dp"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Business Administration"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:gravity="center_horizontal" />
    <CheckBox
        android:id="@+id/chprncleofmngmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prncleofmngmnt"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chbsnscmnction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsnscmnction"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chmrktigmngmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mrktigmngmnt"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chcstacnting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cstacnting"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chfnncialmngmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fnncialmngmnt"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chfnnclstatmntanlyss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fnnclstatmntanlyss"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chcrprtfnnce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crprtfnnce"
        android:padding="15dp"
        android:textSize="35sp"/>
    <CheckBox
        android:id="@+id/chhrm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hrm"
        android:padding="15dp"
        android:textSize="35sp"/>

           <Button
          android:id="@+id/btnsave"
          android:text="Save"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>


   </LinearLayout>




</ScrollView>